cleaned things a little, fixed spelling

--- a/includes/search.html
+++ b/includes/search.html
@@ -8,7 +8,7 @@
     x-on:keydown.window.prevent.slash="$refs.searchField.focus()"
     placeholder="Search"
     type="search"
-    class="block mb-2 w-full bg-gray-100 focus:outline-none focus:bg-white focus:shadow text-gray-700 font-bold rounded-lg px-4 py-3"
+    class="block mb-2 w-full bg-gray-100 focus:outline-none focus:bg-white focus:shadow text-gray-700 rounded-md px-4 py-3"
   />
 
   <div x-show="filteredPages.length > 0" class="absolute w-64 bg-white shadow-md rounded-b-md p-2" x-ref="listbox">
