--- a/styles/main.css
+++ b/styles/main.css
@@ -5,15 +5,20 @@
 
 @layer base {
   h1, h2, h3, h4, h5 {
-    @apply font-serif; 
+    @apply font-serif font-bold mb-2; 
   }
 
   h1 {
-    @apply text-2xl mt-10 mb-4 font-bold text-red-800;
+    @apply text-2xl mt-10 mb-4 text-red-800;
   }
   h2 {
     @apply text-xl mt-6;
   }
+
+  h3 {
+    @apply text-lg mt-3;
+  }
+
 
   a {
     @apply text-blue-500 hover:text-blue-400;
@@ -42,6 +47,22 @@
 
   tr:last-child {
     @apply border-none;
+  }
+
+  p {
+    @apply mb-3;
+    @apply max-w-3xl;
+  }
+  ul {
+    @apply list-disc pl-8;
+  }
+
+  ul>p {
+    display: none;
+  }
+
+  li {
+    @apply mb-2;
   }
 
 }
