--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,7 +7,11 @@
 <body class="flex flex-col items-stretch min-h-screen">
     <header class="page-header bg-red text-white font-serif text-lg p-4">
         <nav class="flex max-w-screen-lg mx-auto">
-            <a href="/notes/Locations/Ninarith/" class="text-white font-bold mr-6 hover:text-red-100" title="Go home">
+            <a href="/" class="text-white font-bold mr-6 hover:text-red-100" title="Go home">
+                Home
+            </a>
+
+            <a href="/notes/Locations/Ninarith/" class="text-white mr-6 hover:text-red-100" title="Go home">
                 Ninarith
             </a>
             <a href="/notes/Groups%20and%20Organizations/Our%20Party/" class="mr-6 text-white hover:text-red-100">Our Party</a>
