--- a/layouts/session.html
+++ b/layouts/session.html
@@ -5,7 +5,7 @@ layout: default
 {% include 'breadcrumbs.html' %}
 {% include 'session-navigation.html' %}
 
-<article>
+<article class="mb-8">
     {{content}}
 </article>
 
