--- a/layouts/default.html
+++ b/layouts/default.html
@@ -14,7 +14,7 @@
             <a href="/notes/Locations/Ninarith/" class="text-white mr-6 hover:text-red-100" title="Go home">
                 Ninarith
             </a>
-            <a href="/groups%20and%20organizations/the%20unforged%20few/" class="mr-6 text-white hover:text-red-100">The Unforged Few</a>
+            <a href="/notes/Groups%20and%20Organizations/The%20Unforged%20Few/" class="mr-6 text-white hover:text-red-100">The Unforged Few</a>
         </div>
     </header>
 
